tests/negative/traits/duplicate_empty.orng
// error: no main function found
// 
impl for Int {
    fn f(self) -> Int { self }
}

impl for Int {
    fn g(&self) -> Int { self^ }
}